Fix distorted images on front page in IE

--- a/sites/all/themes/aplv_new/sass/style.sass
+++ b/sites/all/themes/aplv_new/sass/style.sass
@@ -253,7 +253,7 @@ a
   &.one-fourth
     width: 21% 
     img
-      max-width: 100%
+      width: 202px
       height: auto 
   &.one-third
     width: 29%
